# Demo.Gen.RdataToVtable

./: .gitignore  Cargo.toml  README.md  rdata.json  rdata.txt
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/parser/src/parse/: gen.rs  mod.rs
src/: gen.rs  main.rs
