[package]
name = "gen-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.8", features = ["std"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

symbolic = { version = "12.1.6", features = ["demangle"] }

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_System_Diagnostics_Debug"
]