[package]
name = "r2v-lib"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
r2v-parser = { path = "../parser", features = ["all"] }
r2v-gen = { path = "../gen", features = ["all"]  }


[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.87"
